--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/gabrielyamato/flango-speak-generator/issues"
   },
-  "homepage": "https://github.com/gabrielyamato/flango-speak-generator#readme"
+  "homepage": "https://github.com/gabrielyamato/flango-speak-generator#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "nodemon": "^2.0.3"
+  }
 }
